--- a/index.html
+++ b/index.html
@@ -2,39 +2,30 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Clase CSS </title>
+    <title>HTML CSS Starter</title>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
-    <!--
-    <div class='flex-parent'>
-      <div class='flex-child left'>
-        <div class='mini'>
-        </div>
-      </div>
-      <div class='flex-child right'>
-      </div>
-    </div>
-    -->
-    <!--/div page content -->
-    <nav class='navbar'>
+    <nav class="navbar">
       <i class="fa fa-shopping-cart shopping-cart" aria-hidden="true"></i>
     </nav>
-    <section class='hero'>
-      <h1 class='title'>Ecommerce Landing</h1>
-    </section>
-    <div class='content'>
-      <aside class='benefits'>
-          <h3>Benefits</h3>
-          <ul>
-            <li>Fast</li>
-            <li>Secure</li>
-            <li>Cheap</li>
-          </ul>
 
+    <section class="hero">
+      <h1 class="title">Ecommerce Landing</h1>
+    </section>
+
+    <div class="content">
+      <aside class="benefits">
+        <h3>Benefits:</h3>
+        <ul>
+          <li>Fast</li>
+          <li>Secure</li>
+          <li>Cheap</li>
+        </ul>
       </aside>
-      <section class='blog'>
+
+      <section class="blog">
         <article>
           <h3>Article #1</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -46,11 +37,11 @@
       </section>
     </div>
 
-    <footer class='footer'>
-      <span class='footer-item contact'>
-        Phone number: (322) 2222
+    <footer class="footer">
+      <span class="footer-item contact">
+        Telephone Number: (322) 2222
       </span>
-      <span class='footer-item credits'>
+      <span class="footer-item credits">
         Made with <i class="fa fa-heart" aria-hidden="true"></i> by Sokuda Software
       </span>
     </footer>
